# Copyright 2024 Taiji Agent Project
# gRPC Bridge - Common Types
#
# 公共消息类型定义，包括枚举、错误处理和共享消息结构
"""
公共类型模块，定义枚举、错误码和共享消息类型
"""

syntax = "proto3";

package hermes.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// ============================================================
// 枚举类型
// ============================================================

// 完成原因枚举
enum FinishReason {
  FINISH_REASON_UNSPECIFIED = 0;
  FINISH_REASON_STOP = 1;           // 正常完成
  FINISH_REASON_LENGTH = 2;         // max_tokens 截断
  FINISH_REASON_TOOL_CALLS = 3;     // 工具调用（继续循环）
  FINISH_REASON_ERROR = 4;          // 出错终止
  FINISH_REASON_CANCELLED = 5;      // 用户/系统取消
  FINISH_REASON_CONTENT_FILTERED = 6; // 内容过滤
  FINISH_REASON_RECURSION_LIMIT = 7;  // 递归限制
}

// 工具类型枚举
enum ToolType {
  TOOL_TYPE_UNSPECIFIED = 0;
  TOOL_TYPE_FUNCTION = 1;           // 标准函数调用
  TOOL_TYPE_CODE_INTERPRETER = 2;   // 代码执行
  TOOL_TYPE_FILE_SEARCH = 3;        // 文件搜索
  TOOL_TYPE_COMPUTER_USE = 4;       // 计算机交互
  TOOL_TYPE_WEB_SEARCH = 5;         // 网络搜索
  TOOL_TYPE_BROWSER = 6;            // 浏览器自动化
}

// 记忆类型枚举
enum MemoryType {
  MEMORY_TYPE_UNSPECIFIED = 0;
  MEMORY_TYPE_SESSION = 1;          // 会话记忆（短期）
  MEMORY_TYPE_EPISODIC = 2;         // 情景记忆（长期）
  MEMORY_TYPE_SEMANTIC = 3;         // 语义记忆（知识）
  MEMORY_TYPE_PROCEDURAL = 4;       // 程序记忆（技能）
}

// Agent 状态枚举
enum AgentStatusEnum {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_IDLE = 1;            // 空闲
  AGENT_STATUS_RUNNING = 2;         // 运行中
  AGENT_STATUS_PAUSED = 3;          // 暂停（等待输入）
  AGENT_STATUS_WAITING_FEEDBACK = 4; // 等待人工反馈
  AGENT_STATUS_ERROR = 5;           // 错误
  AGENT_STATUS_DONE = 6;            // 完成
}

// 记忆后端枚举
enum MemoryBackend {
  MEMORY_BACKEND_UNSPECIFIED = 0;
  MEMORY_BACKEND_HOLOGRAPHIC = 1;   // 本地 SQLite（默认）
  MEMORY_BACKEND_HONCHO = 2;        // Honcho 云服务
  MEMORY_BACKEND_HINDSIGHT = 3;     // Hindsight 云/本地
  MEMORY_BACKEND_MEM0 = 4;          // Mem0 云服务
  MEMORY_BACKEND_SUPERMEMORY = 5;   // Supermemory 云服务
  MEMORY_BACKEND_RETAINDB = 6;      // RetainDB 云服务
}

// gRPC 错误码
enum GrpcErrorCode {
  OK = 0;
  CANCELLED = 1;           // 请求被取消
  UNKNOWN = 2;             // 未知错误
  INVALID_ARGUMENT = 3;    // 请求参数无效
  DEADLINE_EXCEEDED = 4;   // 超时
  NOT_FOUND = 5;           // 资源不存在
  ALREADY_EXISTS = 6;      // 资源已存在
  PERMISSION_DENIED = 7;   // 权限不足
  RESOURCE_EXHAUSTED = 8;  // 资源耗尽（rate limit）
  FAILED_PRECONDITION = 9; // 前置条件不满足
  ABORTED = 10;            // 操作中止
  OUT_OF_RANGE = 11;       // 超出范围
  UNIMPLEMENTED = 12;      // 未实现
  INTERNAL = 13;           // 内部错误
  UNAVAILABLE = 14;        // 服务不可用
  DATA_LOSS = 15;          // 数据丢失
  UNAUTHENTICATED = 16;    // 未认证
}

// ============================================================
// 共享消息类型
// ============================================================

// 错误详情
message ErrorDetail {
  GrpcErrorCode code = 1;
  string message = 2;                    // 人类可读的错误描述
  string detail = 3;                     // 详细错误信息
  map<string, string> metadata = 4;      // 附加上下文
  optional uint32 retry_after_ms = 5;    // 建议重试间隔（毫秒）
}

// 消息（对话消息结构）
message Message {
  string role = 1;                          // "system" | "user" | "assistant" | "tool"
  string content = 2;                       // 文本内容
  optional string name = 3;                 // 工具执行者名称（tool role 时使用）
  optional string tool_call_id = 4;         // 工具调用 ID（tool role 时使用）
  repeated ToolCall tool_calls = 5;         // 工具调用列表（assistant role 时使用）
}

// 工具定义
message ToolDefinition {
  string name = 1;                          // 工具名称
  string description = 2;                   // 工具描述
  google.protobuf.Struct parameters = 3;    // JSON Schema 参数定义
  optional ToolType type = 4;               // 工具类型
}

// 工具调用
message ToolCall {
  string id = 1;                            // 工具调用 ID
  string name = 2;                          // 工具名称
  google.protobuf.Struct args = 3;          // 调用参数
}

// 工具调用增量（流式场景）
message ToolCallDelta {
  string id = 1;                            // 工具调用 ID
  string name = 2;                          // 工具名称
  string args_delta = 3;                    // 参数 JSON 增量
}

// Token 用量
message TokenUsage {
  uint32 input_tokens = 1;                  // 输入 Token 数
  uint32 output_tokens = 2;                 // 输出 Token 数
  optional uint32 total_tokens = 3;         // 总计 Token 数
  optional uint32 cached_input_tokens = 4;  // 缓存命中的输入 Token 数
}

// 模型信息
message ModelInfo {
  string id = 1;                            // 模型 ID
  string name = 2;                          // 模型显示名称
  string provider = 3;                      // 提供商（openai/anthropic/ollama 等）
  bool supports_tools = 4;                  // 是否支持工具调用
  bool supports_streaming = 5;              // 是否支持流式
  bool supports_embeddings = 6;             // 是否支持嵌入
  optional uint32 max_tokens = 7;           // 最大上下文长度
}

// 记忆项
message MemoryItem {
  string id = 1;                            // 记忆 ID
  string content = 2;                       // 记忆内容
  MemoryType type = 3;                      // 记忆类型
  float score = 4;                          // 相似度评分
  google.protobuf.Timestamp created_at = 5; // 创建时间
  optional google.protobuf.Timestamp last_accessed = 6; // 最后访问时间
  map<string, string> metadata = 7;         // 附加元数据
  optional string session_id = 8;           // 关联会话
}

// 技能
message Skill {
  string id = 1;                            // 技能 ID
  string name = 2;                          // 技能名称
  string description = 3;                   // 技能描述
  string version = 4;                       // 版本号
  optional string author = 5;               // 作者
  repeated string platforms = 6;            // 支持平台
  repeated string tags = 7;                 // 标签
  optional string category = 8;             // 类别
  optional string content = 9;              // SKILL.md 内容
  map<string, string> metadata = 10;       // 扩展元数据
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
  uint32 usage_count = 13;                  // 使用次数
  optional float average_score = 14;        // 平均评分
}

// 任务步骤
message TaskStep {
  uint32 iteration = 1;                     // 迭代序号
  string action = 2;                        // 动作描述
  optional string thought = 3;              // 思考过程
  optional string tool_name = 4;            // 使用的工具
  optional string tool_result = 5;          // 工具结果摘要
  float duration_ms = 6;                    // 步骤耗时
}

// 人工干预请求
message HumanInputRequest {
  string request_id = 1;                    // 请求 ID
  string prompt = 2;                        // 向用户展示的提示
  string type = 3;                          // "confirm" | "choice" | "text" | "review"
  repeated string options = 4;              // 选项（choice 类型时使用）
  optional string artifact = 5;             // 待审核内容（review 类型时使用）
  uint32 timeout_seconds = 6;               // 超时时间
}
