classDiagram
    %% ── 核心数据模型 ──
    
    class ChatRequest {
        +repeated Message messages
        +repeated ToolDefinition tools
        +string model
        +optional float temperature
        +optional uint32 max_tokens
        +optional bool stream
        +optional string system_prompt
        +optional string session_id
        +map~string,string~ metadata
    }

    class Message {
        +string role
        +string content
        +optional string name
        +optional string tool_call_id
        +repeated ToolCall tool_calls
    }

    class ToolDefinition {
        +string name
        +string description
        +Struct parameters
        +optional ToolType type
    }

    class ToolCall {
        +string id
        +string name
        +Struct args
    }

    class ChatResponse {
        +string content
        +repeated ToolCall tool_calls
        +FinishReason finish_reason
        +TokenUsage usage
        +string model
        +optional string session_id
        +optional ErrorDetail error
    }

    class ChatChunk {
        +oneof chunk_type
        +optional string content_delta
        +optional ToolCallDelta tool_call_delta
        +optional FinishReason finish_reason
        +optional TokenUsage usage
        +uint32 index
    }

    class ToolCallDelta {
        +string id
        +string name
        +string args_delta
    }

    class TokenUsage {
        +uint32 input_tokens
        +uint32 output_tokens
        +optional uint32 total_tokens
        +optional uint32 cached_input_tokens
    }

    class ErrorDetail {
        +GrpcErrorCode code
        +string message
        +string detail
        +map~string,string~ metadata
        +optional uint32 retry_after_ms
    }

    ChatRequest --> "0..*" Message : contains
    ChatRequest --> "0..*" ToolDefinition : contains
    Message --> "0..*" ToolCall : contains
    ChatResponse --> "0..*" ToolCall : contains
    ChatResponse --> TokenUsage : contains
    ChatResponse --> ErrorDetail : optional
    ChatChunk --> ToolCallDelta : optional
    ChatChunk --> TokenUsage : optional

    %% ── 记忆模型 ──

    class SaveRequest {
        +string content
        +MemoryType type
        +optional string session_id
        +optional string tenant_id
        +map~string,string~ metadata
        +optional MemoryBackend backend
        +repeated float embedding
    }

    class MemoryItem {
        +string id
        +string content
        +MemoryType type
        +float score
        +Timestamp created_at
        +optional Timestamp last_accessed
        +map~string,string~ metadata
        +optional string session_id
    }

    class SearchResponse {
        +repeated MemoryItem results
        +uint32 total_count
        +float search_time_ms
    }

    %% ── 技能模型 ──

    class Skill {
        +string id
        +string name
        +string description
        +string version
        +optional string author
        +repeated string platforms
        +repeated string tags
        +optional string category
        +optional string content
        +map~string,string~ metadata
        +Timestamp created_at
        +Timestamp updated_at
        +uint32 usage_count
        +optional float average_score
    }

    %% ── Agent 模型 ──

    class TaskRequest {
        +string task
        +optional string system_prompt
        +optional string model
        +optional uint32 max_iterations
        +optional float temperature
        +optional string session_id
        +optional string tenant_id
        +map~string,string~ metadata
        +optional bool enable_hitl
        +optional uint32 hitl_timeout_seconds
    }

    class TaskResponse {
        +string result
        +bool success
        +uint32 iterations
        +TokenUsage usage
        +float execution_time_ms
        +repeated TaskStep steps
        +optional string error
        +AgentStatusEnum final_status
    }

    class TaskStep {
        +uint32 iteration
        +string action
        +optional string thought
        +optional string tool_name
        +optional string tool_result
        +float duration_ms
    }

    class TaskChunk {
        +oneof chunk_type
        +optional string text_delta
        +optional string thought
        +optional TaskStep step
        +optional string tool_call
        +optional string tool_result
        +optional HumanInputRequest hitl
        +uint32 index
        +optional AgentStatusEnum status
        +optional bool done
    }

    TaskResponse --> "0..*" TaskStep : contains
    TaskChunk --> TaskStep : optional
    TaskChunk --> HumanInputRequest : optional

    %% ── 枚举 ──

    class FinishReason {
        <<enumeration>>
        UNSPECIFIED
        STOP
        LENGTH
        TOOL_CALLS
        ERROR
        CANCELLED
        CONTENT_FILTERED
        RECURSION_LIMIT
    }

    class ToolType {
        <<enumeration>>
        UNSPECIFIED
        FUNCTION
        CODE_INTERPRETER
        FILE_SEARCH
        COMPUTER_USE
        WEB_SEARCH
        BROWSER
    }

    class MemoryType {
        <<enumeration>>
        UNSPECIFIED
        SESSION
        EPISODIC
        SEMANTIC
        PROCEDURAL
    }

    class AgentStatusEnum {
        <<enumeration>>
        UNSPECIFIED
        IDLE
        RUNNING
        PAUSED
        WAITING_FEEDBACK
        ERROR
        DONE
    }

    class GrpcErrorCode {
        <<enumeration>>
        OK
        CANCELLED
        UNKNOWN
        INVALID_ARGUMENT
        DEADLINE_EXCEEDED
        NOT_FOUND
        ALREADY_EXISTS
        PERMISSION_DENIED
        RESOURCE_EXHAUSTED
        INTERNAL
        UNAVAILABLE
    }

    %% ── 服务接口 ──

    class HermesProviderService {
        <<gRPC Service>>
        +Chat(ChatRequest) ChatResponse
        +StreamChat(ChatRequest) stream ChatChunk
        +GetEmbedding(EmbeddingRequest) EmbeddingResponse
        +GetModels(Empty) ModelList
    }

    class HermesMemoryService {
        <<gRPC Service>>
        +Save(SaveRequest) SaveResponse
        +Search(SearchRequest) SearchResponse
        +GetContext(GetContextRequest) GetContextResponse
        +Delete(DeleteRequest) DeleteResponse
        +ListBackends(Empty) MemoryBackendList
    }

    class HermesSkillsService {
        <<gRPC Service>>
        +ListSkills(ListSkillsRequest) SkillList
        +GetSkill(GetSkillRequest) Skill
        +ExecuteSkill(ExecuteSkillRequest) ExecuteSkillResponse
        +StreamExecuteSkill(ExecuteSkillRequest) stream SkillExecutionChunk
        +CreateSkill(CreateSkillRequest) Skill
        +UpdateSkill(UpdateSkillRequest) Skill
        +DeleteSkill(DeleteSkillRequest) DeleteSkillResponse
    }

    class HermesAgentService {
        <<gRPC Service>>
        +RunTask(TaskRequest) TaskResponse
        +StreamTask(TaskRequest) stream TaskChunk
        +GetStatus(AgentStatusRequest) AgentStatus
        +CancelTask(CancelTaskRequest) CancelTaskResponse
        +GetTaskHistory(TaskHistoryRequest) TaskHistoryResponse
    }

    %% ── 客户端映射 ──

    class HermesClient {
        <<TypeScript>>
        -HermesProviderService providerStub
        -HermesMemoryService memoryStub
        -HermesSkillsService skillsStub
        -HermesAgentService agentStub
        -CircuitBreaker circuitBreaker
        -TimeoutConfig timeouts
        +chat(req) Promise~ChatResponse~
        +streamChat(req) AsyncGenerator~ChatChunk~
        +memorySave(req) Promise~SaveResponse~
        +skillExecute(req) Promise~ExecuteSkillResponse~
        +agentRunTask(req) Promise~TaskResponse~
        -_createDeadline(ms) Date
    }

    class HermesServicerImpl {
        <<Python>>
        -LLMProvider llm_adapter
        -MemoryManager memory_mgr
        -SkillManager skill_mgr
        -AIAgent agent_engine
        +Chat(request, context) ChatResponse
        +StreamChat(request, context) AsyncGenerator~ChatChunk~
        +Save(request, context) SaveResponse
        +ExecuteSkill(request, context) ExecuteSkillResponse
        +RunTask(request, context) TaskResponse
        -_map_messages(msg) internal_format
        -_map_tools(tool_defs) internal_tools
    }

    HermesClient --> HermesProviderService : calls (via gRPC)
    HermesClient --> HermesMemoryService : calls (via gRPC)
    HermesClient --> HermesSkillsService : calls (via gRPC)
    HermesClient --> HermesAgentService : calls (via gRPC)
    HermesServicerImpl ..|> HermesProviderService : implements
    HermesServicerImpl ..|> HermesMemoryService : implements
    HermesServicerImpl ..|> HermesSkillsService : implements
    HermesServicerImpl ..|> HermesAgentService : implements
